<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/language"
        android:title="@string/language"
        app:showAsAction="ifRoom">
    <menu>
        <group
            android:id="@+id/groudid"
            android:checkableBehavior="single">
            <item
                android:id="@+id/EnCompany"
                android:title="English"
                app:showAsAction="never"/>
            <item
                android:id="@+id/GrCompany"
                android:title="Ελληνικα"
                app:showAsAction="never"/>
        </group>
    </menu>
    </item>

    <item
        android:id="@+id/warehouse"
        android:title="@string/warehouse"
        app:showAsAction="never"/>

    <item android:id="@+id/customer_list"
        android:title="@string/customerlist"
        app:showAsAction="never"/>

    <item android:id="@+id/track_truck"
        android:title="@string/tracktruck"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"/>

</menu>