<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/packet"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wholesale_price"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/ws_price"/>

        <TextView
            android:id="@+id/re_price"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:text="@string/re_price"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/qua"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:clickable="false"
            android:orientation="vertical"
            android:text="@string/qu" />

    </LinearLayout>

</LinearLayout>