<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/language"
        android:title="@string/language"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/groudid"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/EnCustomer"
                    android:title="English"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/GrCustomer"
                    android:title="Ελληνικα"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/Sale"
        android:title="@string/sale"/>
    <item android:id="@+id/Order"
        android:title="Make order"/>
    <item
        android:id="@+id/Accept_and_Confirm"
        android:title="Accept and confirm order"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"/>


</menu>